--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-node": "next",
+    "@sveltejs/adapter-vercel": "next",
     "@sveltejs/kit": "next",
     "@types/aos": "^3.0.3",
     "svelte": "^3.29.0",
     "svelte-preprocess": "^4.0.0",
     "tslib": "^2.0.0",
     "typescript": "^4.0.0",
-    "vite": "^2.1.0",
-    "@sveltejs/adapter-vercel": "next"
+    "vite": "^2.1.0"
   },
   "type": "module",
   "dependencies": {
