--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "svelte-kit start"
   },
   "devDependencies": {
-    "@sveltejs/adapter-node": "next",
-    "@sveltejs/adapter-vercel": "next",
-    "@sveltejs/kit": "next",
+    "@sveltejs/adapter-node": "^1.0.0-next.23",
+    "@sveltejs/adapter-vercel": "^1.0.0-next.20",
+    "@sveltejs/kit": "^1.0.0-next.111",
     "@types/aos": "^3.0.3",
     "svelte": "^3.29.0",
     "svelte-preprocess": "^4.0.0",
